# shorter

./: .dockerignore  .gitattributes  .gitignore  .prettierignore  .prettierrc  Cargo.toml  Dockerfile  LICENSE  README.md  \  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/actions/setup-aws/: action.yml
.github/actions/setup-pnpm/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: publish.yml  refresh.yml
.turbo/daemon/: a2dce788b5bd8cf9-turbo.log.2024-07-25
apps/landing/: package.json  postcss.config.cjs  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
apps/landing/src/: app.css  app.html
apps/landing/src/lib/components/: Bg.svelte  Btn.svelte  Footer.svelte  Header.svelte  Shorter.svelte  Wave.svelte  WebGl.svelte
apps/landing/src/lib/components/arrow-link/: arrow-link.svelte  index.ts
apps/landing/src/lib/components/header/: header.svelte
apps/landing/src/lib/components/link/: index.ts  link.svelte
apps/landing/src/lib/constants/: urls.ts
apps/landing/src/lib/icons/: Arrow.svelte  Github.svelte  Menu.svelte
apps/landing/src/lib/types/: bindings.ts  core.ts
apps/landing/src/lib/ui/btn/: btn.svelte  index.ts
apps/landing/src/lib/ui/dropdown-menu/: dropdown-menu-content.svelte  dropdown-menu-item.svelte  index.ts
apps/landing/src/lib/utils/: cn.ts  cva.config.ts  flyAndScale.ts  scrollToElement.ts  scrollToTable.ts  webUrl.ts
apps/landing/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
apps/landing/src/routes/404/: +page.svelte
apps/server/: Cargo.toml  Dockerfile  package.json  wrangler.toml
apps/server/.wrangler/tmp/bundle-8IqumB/: middleware-loader.entry.ts
apps/server/.wrangler/tmp/bundle-lnurWk/: middleware-insertion-facade.js  middleware-loader.entry.ts
apps/server/.wrangler/tmp/bundle-ludKfy/: middleware-loader.entry.ts
apps/server/.wrangler/tmp/dev-Df7WbW/: 56c0be4a6c82208d385a058f920cfe59007bb9ce-index.wasm  shim.js  shim.js.map
apps/server/.wrangler/tmp/dev-eO6EvZ/: cd67ddcd70854cc8aaec32bd555ebe45a3d7c9a3-index.wasm  shim.js  shim.js.map
apps/server/.wrangler/tmp/dev-uXGyBa/: 101f09e3590289369985ff3fa5cf26520e10cd2e-index.wasm  shim.js  shim.js.map
apps/server/src/: config.rs  error.rs  lib.rs  main.rs  utils.rs
apps/server/src/constants/: mod.rs  tld_info.rs  tlds.rs
apps/server/src/models/: domain.rs  mod.rs
apps/server/src/routes/: dns_lookup.rs  dns_lookups.rs  feedback.rs  mod.rs  search.rs  shorter.rs  test.rs
apps/tlds/: Cargo.toml  package.json  wrangler.toml
apps/tlds/src/: lib.rs
apps/web/: package.json  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/src/: app.css  app.html
apps/web/src/lib/: types.ts
apps/web/src/lib/components/: Button.svelte  Link.svelte  Navbar.svelte  Theme.svelte
apps/web/src/lib/components/icons/arrow/: arrow.svelte  index.ts
apps/web/src/lib/components/icons/check/: check.svelte  index.ts
apps/web/src/lib/components/icons/cloudflare/: cloudflare.svelte  index.ts
apps/web/src/lib/components/icons/copy/: copy.svelte  index.ts
apps/web/src/lib/components/icons/feedback/: feedback.svelte  index.ts
apps/web/src/lib/components/icons/github/: github.svelte  index.ts
apps/web/src/lib/components/icons/godaddy/: godaddy.svelte  index.ts
apps/web/src/lib/components/icons/grid/: grid.svelte  index.ts
apps/web/src/lib/components/icons/hostgator/: hostgator.svelte  index.ts
apps/web/src/lib/components/icons/hover/: hover.svelte  index.ts
apps/web/src/lib/components/icons/info/: index.ts  info.svelte
apps/web/src/lib/components/icons/list/: index.ts  list.svelte
apps/web/src/lib/components/icons/lockup/: index.ts  lockup.svelte
apps/web/src/lib/components/icons/logomark/: index.ts  logomark.svelte
apps/web/src/lib/components/icons/menu/: index.ts  menu.svelte
apps/web/src/lib/components/icons/namecheap/: index.ts  namecheap.svelte
apps/web/src/lib/components/icons/namesilo/: index.ts  namesilo.svelte
apps/web/src/lib/components/icons/porkbun/: index.ts  porkbun.svelte
apps/web/src/lib/components/icons/search/: index.ts  search.svelte
apps/web/src/lib/components/icons/select/: index.ts  select.svelte
apps/web/src/lib/components/sidebar/: index.ts  sidebar.svelte
apps/web/src/lib/constants/: asciiArtPos.ts  buyLinks.ts  registrars.ts  urls.ts
apps/web/src/lib/icons/: Github.svelte  Moon.svelte  Sun.svelte
apps/web/src/lib/queries/: dnsLookup.ts  dnsLookups.ts  feedback.ts  search.ts
apps/web/src/lib/stores/: theme.ts
apps/web/src/lib/types/: bindings.ts
apps/web/src/lib/utils/: bindings.ts  flyAndScale.ts  urls.ts  variants.ts
apps/web/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
apps/web/src/routes/(app)/: +layout.svelte  +page.svelte
apps/web/src/routes/(app)/search/: +page.svelte
apps/web/src/routes/(dashboard)/: +layout.svelte  +page.svelte
apps/web/src/routes/(dashboard)/bookmarks/: +page.svelte
apps/web/src/routes/(dashboard)/links/: +page.svelte
apps/web/src/routes/(landing)/: +layout.svelte  +page.svelte
apps/web/src/routes/(public)/: +layout.svelte
apps/web/src/routes/(public)/login/: +page.svelte
apps/web/src/routes/(public)/register/: +page.svelte
apps/web/src/routes/404/: +page.svelte
apps/web/src/routes/search/: +page.svelte
apps/web/src/routes/test/: +page.svelte
apps/web/static/: theme.js
apps/webgl/: Cargo.toml  package.json
apps/webgl/shaders/: fragment.glsl  vertex.glsl
apps/webgl/src/: lib.rs  utils.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/api/: domain.rs  mod.rs  shorten.rs  shorter.rs
core/src/constants/: mod.rs  tld_info.rs  tlds.rs
core/src/domain/: mod.rs
core/src/routes/: mod.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: hash.rs
crates/domain/: Cargo.toml
crates/domain/src/: domain.rs  domain_available.rs  lib.rs  tlds.rs
scripts/: Cargo.toml  package.json  tlds.js  tsconfig.json
scripts/src/: genTldInfo.ts  genTlds.ts
scripts/tmp/: icu.zone
(+52 files in other folders)
