[workspace]
resolver = "2"
members = [
    "apps/server",
    "core",
]

[workspace.package]
license = "MIT"
edition = "2021"
repository = "https://github.com/vloe/shorter"

[workspace.dependencies]
axum = { version = "0.7" }
tokio = { version = "1.38.0", features = ["macros"] }
typeshare = "1.0.0"
hickory-resolver = "0.24.1"
