[workspace]
resolver = "2"
members = ["apps/server", "core"]

[workspace.package]
license = "MIT"
edition = "2021"
repository = "https://github.com/vloe/shorter"

[workspace.dependencies]
# third party dependencies used by two or more of our crates
axum = "0.7"
tokio = "1.38.0"
hickory-resolver = "0.24.1"
