[workspace]
resolver = "2"
members = ["apps/webgl", "apps/server", "core", "scripts"]

[workspace.package]
license = "MIT"
edition = "2021"
repository = "https://github.com/vloe/shorter"

[workspace.dependencies]
# third party dependencies used by two or more crates
axum = "0.7.5"
tokio = "1.39.2"
memmap2 = "0.9.4"
