[package]
name = "sh-scripts"
version = "0.1.0"
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
# sh-crates
sh-core = { path = "../core" }

# workspace dependencies
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

# specific scripts dependencies
reqwest = "0.12.5"
scraper = "0.20.0"
