[package]
name = "sh-scripts"
version = "0.1.0"
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
# sh-crates
sh-core = { path = "../core" }

# workspace dependencies
tokio = { workspace = true, features = ["full"] }
memmap2 = { workspace = true }

# specific scripts dependencies
reqwest = { version = "0.12.5", features = ["json"] }
scraper = "0.20.0"
dotenv = "0.15.0"
serde_json = "1.0.120"
flate2 = "1.0.31"
