[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json", "stream"] }
scraper = "0.20.0"
serde_json = "1.0.120"
dotenv = "0.15.0"
flate2 = "1.0.31"
futures = "0.3"
memmap2 = "0.9.4"
