[package]
name = "sh-tlds"
version = "0.1.0"
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = { workspace = true }
worker = { workspace = true }
worker-kv = { workspace = true }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
wasm-bindgen-futures = "0.4"
reqwest = "0.12.5"

