[package]
name = "sh-webgl"
version = "0.1.0"
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = [
  "WebGlRenderingContext",
  "WebGlProgram",
  "HtmlCanvasElement",
  "WebGlShader",
  "WebGlBuffer",
  "WebGlUniformLocation",
] }
js-sys = "0.3.69"
