[package]
name = "sh-domain"
version = "0.1.0"
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
# workspace dependencies
typeshare = { workspace = true }
serde = { workspace = true, features = ["derive"] }

# specific domain dependencies 
phf = { version = "0.11.1", features = ["macros"] }
