[package]
name = "sh-domain"
version = "0.1.0"
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
# sh-crates
sh-crypto = { path = "../crypto" }

# workspace dependencies
tokio = { workspace = true, features = ["full"] }
typeshare = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bitvec = { workspace = true }

# specific domain dependencies 
phf = { version = "0.11.1", features = ["macros"] }
